# architectural_json_converter

./: .gitignore  CLAUDE.md  DOCUMENTATION_REQUIREMENTS.md  LICENSE  PHASE1_CHECKLIST.md  PHASE2_CHECKLIST.md  PHASE2_SPECIFICATION.md  PROJECT_SPECIFICATION.md  README.md  analyze_02.py  analyze_blocks.py  analyze_dxf_detail.py  before_refactoring.txt  block_patterns.json  block_patterns_advanced.json  cad_analyzer.py  directory_sizes_before.txt  file_list_before.txt  pyproject.toml  requirements.txt  setup.sh  simple_bounds_check.py  test_conversion.py
_docs/: 2025-01-19_phase1_file_analyzers.md  2025-06-20_phase2_difference_analysis.md  2025-06-27_pdf_scale_issue_handover.md  2025-06-28_advanced_block_pattern_analysis.md  2025-06-28_dxf_comprehensive_analysis.md  2025-06-28_final_report.md  2025-06-28_mixed_units_analysis.md  2025-06-28_refactoring_inventory.md  2025-06-28_refactoring_plan.md  2025-06-28_refactoring_results.md  2025-06-28_scale_issue_analysis.md  2025-06-28_scale_refactor_plan.md  2025-06-28_smart_conversion_report.md  2025-06-28_unit_fix_report.md
data/: .gitkeep
docs/: API.md  INSTALLATION.md  PERFORMANCE.md  README_EN.md  README_JP.md  USAGE.md
sample_data/buildings/01/floor_plan/: 01_完成形.dxf
sample_data/buildings/01/site_plan/: 01_敷地図.dxf
sample_data/buildings/02/floor_plan/: 02_完成形.dxf
sample_data/buildings/02/site_plan/: 02_敷地図.dxf
sample_data/buildings/03/floor_plan/: 03_完成形.dxf
sample_data/buildings/03/site_plan/: 03_敷地図.dxf
src/: main.py  main_legacy.py
src/analyzers/: dxf_analyzer.py  pdf_analyzer.py  unit_detector.py
src/data_structures/: __init__.py  geometry_data.py  simple_geometry.py
src/engines/: __init__.py  difference_engine.py  dxf_converter.py  pdf_converter.py  safe_dxf_converter.py
src/visualization/: __init__.py  cad_standard_visualizer.py  geometry_plotter.py  layout_util.py  matplotlib_visualizer.py  safe_pdf_visualizer.py
tests/: test_difference_engine.py  test_dxf_scale_detection.py  test_geometry_data.py  test_matplotlib_visualizer.py  test_phase2_integration.py
tests/test_analyzers/: test_dxf_analyzer.py  test_pdf_analyzer.py
tools/: dxf_to_json.py  visualize_dxf_diff.py
tools/debug/: analyze_block_patterns.py  analyze_block_patterns_advanced.py  analyze_dxf_bounds.py  analyze_unit_problem.py  batch_pdf_test.py  batch_unit_analysis.py  test_both_files.py  test_conversion.py
(+14 files in other folders)
